CICO-43988 : Fix for QA fail - Aligned input middle.

--- a/zest_station/css/themes/amrath/theme.less
+++ b/zest_station/css/themes/amrath/theme.less
@@ -69,6 +69,9 @@
 		#main {
 			#calc > #height > .remove(100%, 125px);
 			top: 125px;
+			&.centered {
+				padding-top: 0;
+			}
 		}
 		.entry.input {
 			.icons {
